--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,20 @@
-tu]]padpas'dsad;ld';
-    
-    
-    
-    
-    
-    
-    
+name: Docker Series Builds
+
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: docker build csharp
+      run: |
+        docker build ./c# -t aimvector/csharp:1.0.0
+    - name: docker build nodejs
+      run: |
+        docker build ./nodejs -t aimvector/nodejs:1.0.0
+    - name: docker build python
+      run: |
+        docker build ./python -t aimvector/python:1.0.0
+    - name: docker build golang
+      run: |
+        docker build ./golang -t aimvector/golang:1.0.0
