--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,13 +9,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: docker build csharp
       run: |
-        docker build -t aimvector/csharp:1.0.0
+        docker build -t csharp:1.0.0
     - name: docker build nodejs
       run: |
-        docker build -t aimvector/nodejs:1.0.0
+        docker build -t nodejs:1.0.0
     - name: docker build python
       run: |
-        docker build -t aimvector/python:1.0.0
+        docker build -t python:1.0.0
     - name: docker build golang
       run: |
-        docker build -t aimvector/golang:1.0.0
+        docker build -t golang:1.0.0
