--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,7 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: docker build csharp
-      run: |
-        docker build -t aimvector/csharp:1.0.0
+      run: docker build -t aimvector/csharp:1.0.0
  
       
